[tool.poetry]
name = "asdc"
version = "4.9.0"
description = ""
authors = ["Yuta Hayashibe <hayashibe@megagon.ai>"]
maintainers = ["Yuta Hayashibe <hayashibe@megagon.ai>"]
license = ""
readme = "README.md"
homepage = ""
repository = ""
documentation = ""
keywords = []

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pydantic = "^2.4.1"
typing_extensions = {version = "!=4.6.0", optional=true}

[tool.poetry.dev-dependencies]
flake8 = ">=3.8.4"
isort = ">=5.6.4"
yamllint = ">=1.25.0"
pydocstyle = ">=5.1.1"
black = ">=21.11b1"
toml = ">=0.10.2"
coverage = ">=6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]

[tool.poetry.urls]
issues = ""

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "basic"
reportUnusedVariable="warning"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
